support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_template_undef.i
%module xxx

%template(blahi) blah<int>;




